feat: support custom step from yaml

--- a/manifests/workflow-controller/templates/configmap.yaml
+++ b/manifests/workflow-controller/templates/configmap.yaml
@@ -9,3 +9,7 @@ data:
     throttleQPS: 100
     idleTimeoutMillSeconds: 200000
     rpcTimeoutMillSeconds: 5000
+    controllerConfig:
+      steps:
+      - kine: "random"
+        qps: 1
