--- a/manifests/workflow-controller/crds/workflow.example.com_steps.yaml
+++ b/manifests/workflow-controller/crds/workflow.example.com_steps.yaml
@@ -58,9 +58,6 @@ spec:
           spec:
             description: StepSpec defines the desired state of Step
             properties:
-              data:
-                description: Json类型的数据
-                type: string
               parameters:
                 additionalProperties:
                   type: string
@@ -92,6 +89,11 @@ spec:
                 - Always
                 - PreserveOnFailure
                 type: string
+              syncPeriodSeconds:
+                default: 0
+                description: 小于等于0 表示不进行sync
+                format: int32
+                type: integer
               type:
                 type: string
             type: object
@@ -107,6 +109,9 @@ spec:
                 format: date-time
                 type: string
               latestRunRetryAt:
+                format: date-time
+                type: string
+              latestSyncAt:
                 format: date-time
                 type: string
               phase:
@@ -145,6 +150,8 @@ spec:
               runRetryCount:
                 format: int32
                 type: integer
+              syncError:
+                type: string
             type: object
         type: object
     served: true
